retrieveSource/objects/Dossier__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <formula>Representant_du_client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Numero_du_dossier__c</fullName>
        <label>Numéro du dossier</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Recent_Time__c</fullName>
        <label>Temps passé récemment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Representant_du_client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Représentant du client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dossiers</relationshipLabel>
        <relationshipName>Dossiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <label>Temps total</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentDate__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>currentDate</label>
        <type>Date</type>
    </fields>
    <label>Dossier</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nom du dossier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dossiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>